fixed header letter spacing

--- a/src/components/theme/Header/header.scss
+++ b/src/components/theme/Header/header.scss
@@ -10,7 +10,7 @@
     font-family: $headerFont;
     font-size: 1.3em;
     color: white;
-    letter-spacing: 0.06em;
+    // letter-spacing: 0.06em;
   }
   &--phone {
     visibility: hidden;
